syntax = "proto3";

service Hello {
  rpc GetMyHello (GetMyHelloMessage) returns (MyHelloResponse) {}
}
message GetMyHelloMessage {
  string target_cat = 1;
}
message MyHelloResponse {
  string name = 1;
  string kind = 2;
}
